--- a/style.css
+++ b/style.css
@@ -1,44 +1,15 @@
-body,
-html {
-	width:100%;
-	height:100%;
+.map {
+    height: 100%;
+    margin: 0;
+    padding: 0;
 }
 
-#search-container {
-	width: 90%;
-	margin: 0 0 0 50px;
-}
+@media only screen and (min-width: 40.063em) {
+    .alert-box.warning {
+        font-size: 1.2em;
+    }
 
-
-#map-list-container {
-	display:flex;
-	margin:10px ;
-	height: 90%;
-}
-
-#list-view {
-	width: 30%;
-}
-
-#map {
-	width: 100%;
-	height: 100%;
-	border: solid 5px black;
-}
-
-.list-view-item {
-	margin: 0;
-	list-style: none;
-	font-size: 1.5rem;
-	color: #cc3300;
-	font-weight: 500;
-}
-
-@media only screen and (max-width: 550px) {
-	.list-view-item {
-		font-size: 0.7rem;
-	}
-	#map-list-container {
-		margin: 0px ;
-	}
+    .search-container .search-input {
+        padding-left: 8px;
+    }
 }
